Fixed Spacing Issues & Nav Bar BG Color

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,6 +1,7 @@
 .container {
   max-width: 70rem;
-  padding: 0 1rem;
+  padding-left: 6%;
+  padding-right: 6%;
   margin: 1rem auto 6rem;
 }
 
