--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -32,29 +32,56 @@
   padding-bottom: 10px;
 }
 
+/* Parameters for a Tiny Screen */
 @media (min-width: 10px) {
-  /* Parameters for a Tiny Screen */
-  .floating {
-    position: -webkit-sticky;
-    float: right;
-    margin-right: 50px;
-    z-index: 2;
-  }
   .headingLg {
     font-size: 1.3rem;
     line-height: 1.4;
     margin: 1rem 0;
   }
-  /* Drop Button */
+  .floating {
+    position: relative;
+    float: right;
+    margin-right: 0px;
+    z-index: 2;
+  }
+  .icon {
+    width: 25px;
+    height: 25px;
+  }
+  /* Drop Up Button */
+  .dropbtn2 {
+    background-color: #dfdfdf;
+    color: rgb(71, 71, 71);
+    border: none;
+    padding: 7px;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+  }
+  /* Drop Up Container */
+  .dropupcontent {
+    display: none;
+    position: absolute;
+    bottom: 50px;
+    background-color: #dfdfdf;
+    min-width: 5px;
+    padding: 5px 6px;
+    margin-bottom: -47px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+  }
+  /* Drop Down Button */
   .dropbtn {
     color: rgb(116, 116, 116);
+    background-color: #ffffff;
     font-family: "TCM";
     font-size: 1rem;
     font-weight: 400;
     border: none;
   }
 
-  /* Links inside the dropdown */
+  /* Drop Down Links (Font-Size) */
   .dropdowncontent a {
     color: rgb(172, 172, 172);
     padding: 12px 16px 12px 12px;
@@ -62,7 +89,7 @@
     display: block;
     font-size: 0.8rem;
   }
-  /* Dropdown Content (Hidden by Default) */
+  /* Drop Down Container */
   .dropdowncontent {
     padding-top: 15px;
     display: none;
@@ -106,17 +133,20 @@
     box-shadow: 5px 0px 10px 0px rgba(0, 0, 0, 0.3);
   }
 }
+/* Parameters for a Small Screen */
 @media (min-width: 600px) {
-  /* Parameters for a Small Screen */
   .headingLg {
     font-size: 1.4rem;
   }
+  /* Drop Down Button */
   .dropbtn {
     font-size: 1.1rem;
   }
+  /* Drop Down Links (Font-Size) */
   .dropdowncontent a {
     font-size: 1rem;
   }
+  /* Drop Down Container */
   .dropdowncontent {
     min-width: 290px;
   }
@@ -136,17 +166,24 @@
     column-gap: 25px;
   }
 }
+
+/* Parameters for a Medium Screen */
 @media (min-width: 750px) {
-  /* Parameters for a Medium Screen */
+  .floating {
+    margin-right: -5px;
+  }
   .headingLg {
     font-size: 1.6rem;
   }
+  /* Drop Down Button */
   .dropbtn {
     font-size: 1.2rem;
   }
+  /* Drop Down Links (Font-Size) */
   .dropdowncontent a {
     font-size: 1.1rem;
   }
+  /* Drop Down Container */
   .dropdowncontent {
     min-width: 320px;
   }
@@ -168,17 +205,45 @@
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1270px) {
   /* Parameters for a BIG Screen */
   .headingLg {
     font-size: 1.7rem;
   }
+  .floating {
+    margin-right: 0px;
+  }
+  .icon {
+    width: 36px;
+    height: 36px;
+  }
+  /* Drop Up Button */
+  .dropbtn2 {
+    width: 36px;
+    height: 36px;
+    padding: 7px;
+  }
+  /* Drop Up Container */
+  .dropupcontent {
+    display: none;
+    position: absolute;
+    bottom: 50px;
+    background-color: #dfdfdf;
+    min-width: 20px;
+    padding: 15px 12px;
+    margin-bottom: -47px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+  }
+  /* Drop Down Button */
   .dropbtn {
     font-size: 1.3rem;
   }
+  /* Drop Down Links (Font-Size) */
   .dropdowncontent a {
     font-size: 1.2rem;
   }
+  /* Drop Down Container */
   .dropdowncontent {
     min-width: 350px;
   }
@@ -191,15 +256,16 @@
   }
   .menu3 {
     font-size: 1.2rem;
-    column-gap: 25px;
+    column-gap: 1s5px;
   }
   .videoMenu {
     font-size: 1.2rem;
   }
 }
 @media (min-width: 1500px) {
+  /* Parameters for a BIG Screen */
   .floating {
-    margin-right: -30px;
+    margin-right: -25px;
   }
 }
 
@@ -226,17 +292,14 @@
   color: rgb(66, 66, 66);
   cursor: pointer;
 }
+.dropup:hover .dropbtn {
+  background-color: #ffffff;
+}
 
 /* END OF DROPDOWN BUTTON*/
 
 /* DROPUP BUTTON */
-.dropbtn2 {
-  background-color: #dfdfdf;
-  color: rgb(71, 71, 71);
-  border: none;
-  padding: 7px;
-  border-radius: 50%;
-}
+
 /* The container <div> - needed to position the dropup content */
 .dropup {
   position: fixed;
@@ -246,17 +309,6 @@
 }
 
 /* Dropup content (Hidden by Default) */
-.dropupcontent {
-  display: none;
-  position: absolute;
-  bottom: 50px;
-  background-color: #dfdfdf;
-  min-width: 20px;
-  padding: 15px 12px;
-  margin-bottom: -47px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
-}
 
 /* Links inside the dropup */
 .dropupcontent a {
@@ -266,7 +318,6 @@
   text-decoration: none;
   display: block;
 }
-
 /* Change color of dropup links on hover */
 .dropupcontent a:hover {
   background-color: #ddd;
